--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/img/logo.png" />
+    <!-- <link rel="icon" type="image/png" href="/img/logo.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GigaNet CRM</title>
+    <title>Animation Name</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
